# GUI

./: Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
docs/: app-shell.md  architecture.md  packaging.md  react-aria-native.md  roadmap.md  rsx-framework.md  rsx.md  style-contract.md  web-authoring.md
examples/: appkit_calculator.rs  appkit_component_playground.rs  appkit_controls.rs  appkit_counter.rs  appkit_dogfood.rs  component_playground.rs  dogfood_session.rs  gtk4_calculator.rs  gtk4_component_playground.rs  gtk4_controls.rs  gtk4_counter.rs  gtk4_dogfood.rs  native_runtime_app.rs  protocol_session.rs  state_loop.rs  winui_calculator.rs  winui_component_playground.rs  winui_controls.rs  winui_counter.rs  winui_dogfood.rs
examples/support/: controls_smoke.rs  dogfood_app.rs
examples/support/calculator/: mod.rs  model.rs  view.rs
examples/support/component_playground/: mod.rs  model.rs  view.rs
packaging/: a3s-gui-dogfood-README.txt  check-archive-metadata.sh  check-bundle-manifest.sh  write-archive-metadata.sh  write-bundle-manifest.sh  write-file-sha256.sh
packaging/linux/: a3s-gui-dogfood.desktop
packaging/macos/: A3SGuiDogfood-Info.plist
packaging/windows/: a3s-gui-dogfood.manifest
sdk/typescript/: README.md  package.json
sdk/typescript/src/: index.d.ts  index.js  jsx-runtime.d.ts  jsx-runtime.js
sdk/typescript/test/: component-markers.test.mjs  intrinsic-props.test.mjs  jsx-runtime.test.mjs  protocol.test.mjs
src/: accessibility.rs  app.rs  appkit.rs  appkit_native.rs  backend.rs  capability.rs  compiler.rs  css_text.rs  default_components.rs  effect.rs  error.rs  event.rs  focus.rs  geometry.rs  gtk4.rs  gtk4_native.rs  host.rs  html.rs  i18n.rs  input.rs  input_conformance.rs  interaction.rs  lib.rs  native.rs  overlay.rs  overlay_position.rs  platform.rs  protocol.rs  react_aria.rs  renderer.rs  rsx.rs  rsx_app.rs  runtime.rs  selection.rs  semantic_ui.rs  style.rs  svg.rs  web.rs  winui.rs  winui_native.rs
src/accessibility/: conformance.rs  conformance_tests.rs  live_region.rs  relationship_registry.rs  structure.rs  structure_registry.rs
src/app/: multi_action_tests.rs  tests.rs
src/appkit/: tests.rs
src/appkit_native/: action.rs  controls.rs  hierarchy.rs  interaction.rs  mod.rs  mount.rs  propagation.rs  relationships.rs  structure.rs  style.rs  surface.rs  types.rs  update.rs  window.rs
src/backend/: command_host.rs  driver.rs  executor.rs  mod.rs  recording.rs  surface.rs  tests.rs  traits.rs
src/backend/tests/: diagnostic_redaction.rs  frame_batch.rs  setter_history_adapters.rs  typed_kind.rs
src/capability/: accessibility_features.rs  accessibility_structure.rs  tests.rs
src/compiler/: component_variants.rs  components.rs  props.rs
src/compiler/props/: accessibility.rs  activation.rs  attributes.rs  controls.rs  dialog.rs  form_association.rs  global.rs  microdata.rs  resource_policy.rs  resources.rs  semantic.rs  shadow.rs  states.rs  structure.rs  text_annotation.rs
src/compiler/tests/: core.rs  html_activation.rs  html_collections.rs  html_form_association.rs  html_forms.rs  html_global.rs  html_resource_policy.rs  html_structure.rs  html_text.rs  intrinsic.rs  mod.rs
src/event/: conformance_tests.rs  move_interaction.rs  press.rs  tests.rs
src/focus/: tests.rs
src/gtk4/: tests.rs
src/gtk4_native/: hierarchy.rs  interaction.rs  mod.rs  mount.rs  propagation.rs  relationships.rs  structure.rs  surface.rs  types.rs  update.rs
src/html/: activation.rs  collections.rs  dialog.rs  form_association.rs  microdata.rs  registry.rs  resource_policy.rs  shadow.rs  text_annotation.rs
src/i18n/: collator.rs  datetime.rs  messages.rs  number.rs  number_parser.rs  tests.rs
src/input_conformance/: tests.rs  validation.rs
src/native/: accessibility_description.rs  accessibility_relationships.rs  accessibility_state.rs  accessibility_structure.rs  html_activation.rs  html_collection.rs  html_dialog.rs  html_form_association.rs  html_microdata.rs  html_resource_policy.rs  html_shadow.rs  html_text_annotation.rs  value_sensitivity.rs
src/native_backends/: mod.rs
src/native_backends/appkit/: menu.rs
src/native_backends/gtk4/: menu.rs
src/native_backends/winui/: menu.rs
src/overlay_position/: mounted.rs  tests.rs
src/platform/: adapters.rs  config.rs  mod.rs  planning.rs  tests.rs  types.rs  widget_names.rs
src/platform/config/: patch.rs  setter.rs
src/platform/tests/: frame_transactions.rs  setter_history.rs
src/protocol/: multi_action_tests.rs
src/protocol/tests/: accessibility.rs  events.rs  frame.rs  mod.rs  v1.rs  values.rs  window_wire.rs
src/protocol/v1/: accessibility.rs  control.rs  dto.rs  enums.rs  mod.rs  session.rs
src/react_aria/: component.rs  element.rs  mapper.rs  props.rs  tests.rs  types.rs
src/react_aria/props/: accessibility_description.rs  accessibility_relationships.rs  accessibility_state.rs  accessibility_structure.rs  html_activation.rs  (+7 more)
src/renderer/: snapshot.rs  tests.rs
src/rsx_app/: component_cx.rs  hooks.rs  tests.rs
src/rsx_ui/: classes.rs  interaction_tests.rs  mod.rs  selection_tests.rs  tests.rs  variants.rs
src/runtime/: accessibility.rs  accessibility_conformance_tests.rs  collection_navigation_tests.rs  focus_within_tests.rs  i18n_tests.rs  interaction_style.rs  interaction_style_tests.rs  live_region.rs  multi_action_tests.rs  overlay_tests.rs  selection_tests.rs
src/selection/: collection.rs  layout.rs  mounted.rs  mounted_tests.rs  tests.rs  typeahead.rs
src/semantic_ui/: component.rs  element.rs  hooks.rs  mapper.rs  props.rs  tests.rs
src/style/: apply.rs  color_parsing.rs  composition.rs  declarations.rs  interaction.rs  mod.rs  parsing.rs  portable.rs  shorthands.rs  tailwind.rs  tailwind_apply.rs  tailwind_utilities.rs  tests.rs  types.rs  value_parsing.rs
src/winui/: tests.rs
src/winui_native/: automation.rs  event_loop.rs  focus.rs  helpers.rs  hierarchy.rs  input_abi.rs  interaction.rs  mod.rs  mount.rs  propagation.rs  relationships.rs  runtime.rs  structure.rs  surface.rs  types.rs  update.rs  window.rs
(+383 files in other folders)
